header images, better logo

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-<header class="app-bar promote-layer" style="background-image: url('images/choose/web-header.png')">
-  <div class="app-bar-container" style="background-image: url('images/choose/web-header.png'); background-position: center">
+<header class="app-bar promote-layer" style="background-image: url('images/choose/svg_web_header.svg')">
+  <div class="app-bar-container" style="background-image: url('images/choose/svg_web_header.svg'); background-position: center">
     <button class="menu"><img src="images/choose/logo.png" alt="Menu"></button>
-    <h1 class="logo" style="color: red">REACT. <strong>Choose:</strong></h1>
+    <h1 class="logo" style="color: #A4C639">REACT. <strong>Choose:</strong></h1>
     <section class="app-bar-actions">
     </section>
   </div>
@@ -38,15 +38,15 @@
 -->
 <main>
   <div class="logo-container">
-    <a href="https://play.google.com/store/apps/"><img src=""></a>
-    <a href="https://itunes.apple.com/genre/ios/"><img src=""></a>
+    <a href="https://plus.google.com/communities/116184494042133184365"><img src=""></a>
+    <a href="https://plus.google.com/communities/116184494042133184365"><img src=""></a>
   </div>
   <p></p>
 </main>
 
 <script>
-  var ANDROID_URL = "https://play.google.com/store/apps"
-    , IOS_URL = "https://itunes.apple.com/genre/ios/";
+  var ANDROID_URL = "https://plus.google.com/communities/116184494042133184365"
+    , IOS_URL = "https://plus.google.com/communities/116184494042133184365";
   var isMobile = {
     Android: function() {
       return navigator.userAgent.match(/Android/i);
