--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <html lang="">
 <head>
   <meta charset="utf-8">
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64804971-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Choose an appstore.</title>
@@ -20,7 +30,7 @@
 <body>
 <header class="app-bar promote-layer" style="background-image: url('images/choose/svg_web_header.svg')">
   <div class="app-bar-container" style="background-image: url('images/choose/svg_web_header.svg'); background-position: center">
-    <button class="menu"><img src="images/choose/logo.png" alt="Menu"></button>
+    <button class="menu"><img src="images/choose/logo.svg" alt="Menu"></button>
     <h1 class="logo" style="color: #A4C639">REACT. <strong>Choose:</strong></h1>
     <section class="app-bar-actions">
     </section>
