Twitter app card for reactgame.ga

--- a/index.html
+++ b/index.html
@@ -96,5 +96,16 @@
 <!-- build:js(app/) ../../scripts/main.min.js -->
 <script src="scripts/main.js"></script>
 
+<meta name="twitter:card" content="app">
+<meta name="twitter:site" content="@_MatttB">
+<meta name="twitter:description" content="Introducing React! Tap when the ball meets lit tiles to survive! Can you React?">
+<meta name="twitter:app:country" content="US">
+<meta name="twitter:app:name:iphone" content="React - Tap Fast">
+<meta name="twitter:app:id:iphone" content="1022875638">
+<meta name="twitter:app:name:ipad" content="React - Tap Fast">
+<meta name="twitter:app:id:ipad" content="1022875638">
+<meta name="twitter:app:name:googleplay" content="React - Tap Fast">
+<meta name="twitter:app:id:googleplay" content="com.Matt.Reflex">
 </body>
+
 </html>
