--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 -->
 <main>
   <div class="logo-container">
-    <a href="https://plus.google.com/communities/116184494042133184365"><img src=""></a>
-    <a href="https://plus.google.com/communities/116184494042133184365"><img src=""></a>
+    <a href="https://play.google.com/store/apps/details?id=com.Matt.Reflex"><img src=""></a>
+    <a href="https://itunes.apple.com/us/app/react-tap-fast/id1022875638"><img src=""></a>
   </div>
   <p></p>
 </main>
 
 <script>
-  var ANDROID_URL = "https://plus.google.com/communities/116184494042133184365"
-    , IOS_URL = "https://plus.google.com/communities/116184494042133184365";
+  var ANDROID_URL = "https://play.google.com/store/apps/details?id=com.Matt.Reflex"
+    , IOS_URL = "https://itunes.apple.com/us/app/react-tap-fast/id1022875638";
   var isMobile = {
     Android: function() {
       return navigator.userAgent.match(/Android/i);
